2013-12-14  KUBO Takehiro  <kubo@jiubao.org>
	* test/*.rb: suppress warnings "MiniTest::Unit::TestCase is now Minitest::Test"
	    when minitest gem is installed.

2013-12-14  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_metadata.rb: fix tests in an environment where
	    the data size of "CAST('1' AS CHAR(1 char))" is wrong.

2013-11-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: support cygwin x86_64.

2013-11-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/lob.c, ext/oci8/object.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/ocihandle.c, ext/oci8/stmt.c:
	    use rb_class_new_instance() instead of rb_funcall() with rb_intern("new").

2013-11-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/extconf.rb, ext/oci8/oci8.h:
	    append the full path of the Oracle client library when OCIEnvCreate
	    is failed such as "OCI Library Initialization Error - /path/to/libclntsh.so.12.1".

2013-11-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, lib/oci8.rb.in: support rubinius 2.x whose
	    RUBY_VERSION is 2.1.0.
	* ext/oci8/oraconf.rb: reduce the size of libOCI.a created for cygwin.

2013-11-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, lib/oci8.rb.in: support ruby 2.1.0-preview1.
	    (requested by Yasuo Honda)

2013-08-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Use Dir.glob to find the Oracle instant client
	    NLS data file. Its name depends on the Oracle major version on
	    Windows.

2013-08-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/metadata.rb: fix undefined method 'char_used?' when
	    OCI8::Metadata::Argument#inspect is called.
	* test/test_metadata.rb: refactor and add tests for #inspect methods.
	* test/test_package_type.rb: add some test data.

2013-07-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c, ext/oci8/ocihandle.c, test/test_metadata.rb:
	    Fix segmentation fault when metadata are accessed after the
	    session is disconnected.
